[package]
name = "chilly_canvas"
version = "0.1.0"
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
glam = "0.29.2"
iced = { version = "0.13.1", features = ["advanced", "canvas", "debug", "lazy"] }
tempfile = "3.14.0"
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.5", features = ["client", "unstable"] }
