cargo-features = ["codegen-backend"]
[package]
name = "monstera"
authors = ["John Christensen johnedchristensen@gmail.com"]
version = "0.1.0"
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

[profile.dev]
debug = 0
codegen-backend = "cranelift"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
glam = "0.29.2"
iced = { version = "0.13.1", features = ["advanced", "canvas", "debug", "lazy"] }
