[package]
name = "chilly_canvas"
version = "0.1.0"
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
bytemuck = "1.20.0"
glam = "0.29.2"
iced = { version = "0.13.1", features = ["advanced", "canvas", "debug", "lazy"] }
iced_wgpu = "0.13.5"
iced_winit = "0.13.0"
tempfile = "3.14.0"
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.5", features = ["client", "unstable"] }
winit = "0.30.5"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
